#113655 WIP: Spring boot 4 migration